--- a/shopping-cart/src/index.css
+++ b/shopping-cart/src/index.css
@@ -4,6 +4,10 @@ Variables
 ===============
 */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --clr-primary: #645cff;
   --clr-primary-dark: #282566;
@@ -27,8 +31,8 @@ Variables
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
